--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ############################ Default configuration #########################
-baseURL = "https://demo.gethugothemes.com"
+baseURL = "https://discerningchurch.org"
 languageCode = "en-us"
 # site title 
 title = "Discerning Church"
@@ -66,7 +66,7 @@ link = "plugins/search/search.js"
 # home
 home = "Home"
 # logo
-logo = "images/logo.svg"
+logo = "images/dc-logo.png"
 # meta data
 author = "Wade Allen"
 description = "This is meta description"
