--- a/config.toml
+++ b/config.toml
@@ -112,8 +112,8 @@ link = "https://gethugothemes.com/shop/"
 
 ############################## Social Site ##########################
 [[params.social]]
-icon = "ti-facebook" # themify icon pack https://themify.me/themify-icons
-link = "#"
+# icon = "ti-facebook" # themify icon pack https://themify.me/themify-icons
+# link = "#"
 # [[params.social]]
 # icon = "ti-twitter-alt" # themify icon pack https://themify.me/themify-icons
 # link = "#"
